# rtix

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  requirements.txt  setup.py  version.txt
cmake/: CodeCoverage.cmake  rtixConfig.cmake.in
examples/cmake_import/: CMakeLists.txt  README.md  main.cpp
examples/python_ping_pong/: README.md  channel-map.yaml  docker-compose.yaml
examples/python_ping_pong/node_a/: run_node_a.py
examples/python_ping_pong/node_b/: run_node_b.py
examples/python_pub_sub/: README.md  docker-compose.yaml
examples/python_pub_sub/py_pub/: run_py_pub.py
examples/python_pub_sub/py_sub/: run_py_sub.py
rtix/: CMakeLists.txt
rtix/api/: CMakeLists.txt  common.proto
rtix/core/: CMakeLists.txt  exception.cpp  exception.h  exception.py  format.h  logging.cpp  logging.h  logging.py  status.h  timer.cpp  timer.h  timer.py
rtix/core/tests/: test_exception.cpp  test_exception.py  test_format.cpp  test_logging.cpp  test_logging.py  test_timer.cpp  test_timer.py
rtix/ipc/: CMakeLists.txt  channel_map.cpp  channel_map.h  node.cpp  node.h  node.py
rtix/ipc/tests/: channel-map.yaml  test_channel_map.cpp  test_channel_map.h  test_channel_map.py  test_node.cpp  test_node.py
rtix/process/: CMakeLists.txt  process.h  process.py  process_impl.h
rtix/process/tests/: channel-map.yaml  test_process.cpp  test_process.py
rtix/types/: CMakeLists.txt
